<resources>
    <string name="app_name">Am I Wrong</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_questions">Questions</string>
    <string name="title_my_questions">My Questions</string>
    <string name="title_questions_i_ve_answered">Questions i\'ve answered</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="comment">Comment</string>
    <string name="ask">Ask</string>
    <string name="new_question_hint">I just smuggled a llama from the city zoo. Was I right?</string>
    <string name="chars_remaining">%1$d/%2$d</string>
	<string name="send">Send</string>
    <string name="add_question_loading_message">Adding your question ...</string>
    <string name="question_add_failed_message">Oops! We couldn\'t post your question. Please try again later!</string>
    <string name="dismiss">Dismiss</string>
	<string name="questions_posted">My Questions</string>
    <string name="questions_ive_answered">My Answers</string>
    <string name="add">Add</string>
    <string name="posting_as">This name will not be used whilst posting, but it will whilst commenting.\n\nYou can change this any time from the menu</string>
    <string name="enter_name">Enter name</string>
    <string name="anonymous">Anonymous</string>
    <string name="random">Random</string>
    <string name="go">Go!</string>
    <string name="tutorial_1">Post your questions you need that extra perspective on right here</string>
    <string name="tutorial_2">Then post it to the community and see what the rest of the world says</string>
    <string name="search">Search</string>
    <string name="no_questions">You haven\'t posted\nany questions yet</string>
    <string name="hide">Hide</string>
    <string name="why_do_you_want_to_hide_this_post">Why do you want to hide this question?</string>
    <string name="i_just_don_t_want_to_see_it_anymore">I just don\'t want to see it anymore</string>
    <string name="it_s_spam_offensive_or_contains_explicit_language">It\'s spam, offensive or contains explicit language</string>
    <string name="hide_question">Hide This Question</string>
    <string name="hide_question_confirmation">Are you sure you want to hide this question?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="report_feedback">Thank you for your feedback!\n\nIn the future we won\'t display this question again</string>
    <string name="ok">Ok!</string>
    <string name="search_for_questions">What question are you looking for?\n\nYou can only search questions you\'ve previously answered</string>
    <string name="question">Question...</string>
    <string name="no_lower">No</string>
    <string name="yes_lower">Yes</string>
    <string name="no_answers">You haven\'t answered \nany questions yet :(</string>
    <string name="no_results">No results found\n\nRemember you can only view questions you\'ve already answered here</string>
    <string name="am_i_wrong">Am I Wrong?</string>
    <string name="post_too_soon">Oops! You can only post a question once every %1$d minutes. Please try again later.</string>

    <string-array name="colors">
        <item>#50E3C2</item>
        <item>#F89EF3</item>
        <item>#061218</item>
        <!--<item>#388E3C</item>-->
        <!--<item>#7B1FA2</item>-->
        <!--<item>#E64A19</item>-->
        <!--<item>#616161</item>-->
        <!--<item>#C2185B</item>-->
    </string-array>

    <string-array name="names">
        <item>The Limp Lizard</item>
        <item>The Aspirational Giraffe</item>
        <item>The Fat Panda</item>
        <item>The Quirky Duck</item>
        <item>The Mental Goose</item>
        <item>The Lazy Toerag</item>
    </string-array>

    <string-array name="example_question">
        <item>I just walked out of a shop without paying.</item>
        <item>I just smuggled a llama from the city zoo.</item>
        <item>I took out the TV while playing Wrestling, and I am trying to hide it from my family.</item>
        <item>I\'m sick of taking care of my aging grandma.</item>
        <item>I just farted and blamed a kid.</item>
        <item>I fed a vegetarian hot dogs, because I thought they were veggie.</item>
        <item>I hit a bird with a golf ball and I think I killed it.</item>
        <item>Eat a kids birthday cake before his birthday.</item>
        <item>Tripped an old lady by accident.. Maybe..</item>
    </string-array>
</resources>
