<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <View
        android:id="@+id/commentView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <RelativeLayout
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:layout_below="@id/commentView"
        android:id="@+id/rlTextContainer"
        android:layout_above="@+id/rlButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:layout_alignParentTop="true"
            android:layout_above="@+id/llTextContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:text="@string/tutorial_1"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginBottom="8dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/tutorial_1_arrow"
                android:layout_height="42dp"
                android:layout_width="42dp"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llTextContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerGray"/>

            <EditText
                android:id="@+id/etQuestionInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:textColorHint="#ddd"
                android:hint="@string/new_question_hint"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="18sp"/>

            <TextView
                android:text="@string/am_i_wrong"
                android:paddingBottom="8dp"
                android:gravity="right|end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerGray"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvCurrentLength"
            android:layout_below="@id/llTextContainer"
            android:layout_alignRight="@id/llTextContainer"
            android:layout_alignEnd="@id/llTextContainer"
            android:layout_width="wrap_content"
            android:text="@string/chars_remaining"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"/>


        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_below="@id/tvCurrentLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/tutorial_2_arrow"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:gravity="center"
                android:text="@string/tutorial_2"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:background="@android:color/white"
        android:id="@+id/rlButtonContainer"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/btnAsk"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:background="@color/no_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask"
            android:elevation="4dp"/>

    </RelativeLayout>

</RelativeLayout>