<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

    <Button
        android:id="@+id/btnHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:visibility="gone"
        android:text="@string/hide"
        android:textColor="@color/colorPrimaryDark"/>

    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnHide">

        <RelativeLayout
            android:id="@+id/rlHideableHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvQuestionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="32dp"
                android:textSize="22sp"/>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/etBackground">


        </android.support.v7.widget.RecyclerView>

        <ImageView
            android:id="@+id/etBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignTop="@+id/etContent"
            android:alpha="0.0"
            android:background="@color/lightergray"
            android:visibility="gone"/>

        <Button
            android:id="@+id/tvSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/etContent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.0"
            android:background="@color/transparent"
            android:elevation="0dp"
            android:enabled="false"
            android:foreground="?attr/selectableItemBackground"
            android:padding="8dp"
            android:paddingBottom="8dp"
            android:text="@string/send"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toLeftOf="@id/tvSend"
            android:layout_toStartOf="@id/tvSend"
            android:alpha="0.0"
            android:background="@color/lightergray"
            android:hint="@string/comment"
            android:inputType="textCapSentences"
            android:maxLines="4"
            android:paddingBottom="12dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="12dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/etDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.0"
            android:src="@color/colorPrimary"
            android:visibility="gone"/>

    </RelativeLayout>

</RelativeLayout>